# rust_graphQL

./: .gitignore  Cargo.toml  README.md
migration/src/: lib.rs  m20230903_154335_user.rs
src/: main.rs
src/api/: graphql.rs  mod.rs  playground.rs
src/config/: cors.rs  db.rs  mod.rs
src/entity/: user.rs
src/graphql/: data.rs  mod.rs
src/resolver/: user.rs
src/schemas/: user.rs
src/services/: user.rs
src/type_defs/: user.rs
tests/: main.rs
