[package]
name = "graphql_api"
version = "0.1.0"
edition = "2021"

[dependencies]
juniper = "0.15.11"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
env_logger = "0.10.0"
actix-web = "4.4.0"
tokio = { version = "1.32.0", features = ["full"] }
juniper_actix = "0.4.0"
actix-cors = "0.6.4"

[dev-dependencies]
juniper = { version = "0.15.11", features = ["expose-test-schema"] }
